--- a/week1/day1/3_git.html
+++ b/week1/day1/3_git.html
@@ -40,4 +40,6 @@
     // git add  .                  把工作区的内容提交到缓存区
     // git commit -m '备注'        把缓存区的内容提交到历史区
     // git push                    把历史区的内容提及到远程仓库
+
+    // git  clone  别人的仓库地址    把别人的仓库复制(克隆)一份到自己的电脑
 </script>
