--- a/week1/day1/3_git.html
+++ b/week1/day1/3_git.html
@@ -42,4 +42,5 @@
     // git push                    把历史区的内容提及到远程仓库
 
     // git  clone  别人的仓库地址    把别人的仓库复制(克隆)一份到自己的电脑
+    // git pull                     把远程仓库的内容更新到本地
 </script>
