--- a/week1/day2/5_window.html
+++ b/week1/day2/5_window.html
@@ -22,6 +22,7 @@
     // var 可以重复声明  let和 const不可以
     // var 存在变量提升  let 和 const  没有
     // var 声明的变量 会在window下增加一个对应的属性； let 和 const 不会
+    // var 不识块级作用域  let 和 const 可以
 
     function f(){
         console.log(a)
