--- a/week3/day3/8_JS盒子模型.html
+++ b/week3/day3/8_JS盒子模型.html
@@ -18,7 +18,7 @@
             background: #ccc;
             border:10px solid red;
             margin: 30px auto;
-            overflow: hidden
+            /* overflow: hidden */
         }
         main{
             position: relative;
