--- a/week6/day2/2_2d案例.html
+++ b/week6/day2/2_2d案例.html
@@ -45,7 +45,7 @@
         }
 
         .big_box li:nth-child(1) {
-            animation: bounceInDown 1s linear;
+            animation: bounceInDown 1s infinite linear;
         }
 
         .big_box li:nth-child(2) {
