--- a/week7/day1/1_复习.html
+++ b/week7/day1/1_复习.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    
+    <a href="http://127.0.0.1:5500/classic/week7/day2/1_%E5%A4%8D%E4%B9%A0.html#js">js</a>
 </body>
 </html>
 <script src="./flexible.js"></script>
