--- a/week7/day4/3_fetch.html
+++ b/week7/day4/3_fetch.html
@@ -17,7 +17,10 @@
     }).catch((err)=>{
         console.log('get',err)
     });
-    http.post('./data1.json',{a:12,b:234,t:Date.now()},'formData').then((data)=>{
+    http.post('http://127.0.0.1:8888/user/login',{
+        account:'珠峰培训',
+        password:'25f9e794323b453885f5181f1b624d0b'
+    },'formData').then((data)=>{
         console.log('post',data)
     }).catch((err)=>{
         console.log('post',err)
