--- a/week9/zhihu/public/index.html
+++ b/week9/zhihu/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>zhihu</title>
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1520931_th5jgs28apm.css">
+    <title>知乎</title>
   </head>
   <body>
     <noscript>
