--- a/week1/day1/1_复习.html
+++ b/week1/day1/1_复习.html
@@ -15,6 +15,8 @@
         1227760869
 
      -->
+     <input type="checkbox" name="" id="qqq">
+     <label for="qqq">珠峰</label>
      <div id="box">
          珠峰
      </div>
