--- a/week2/day3/1_复习.html
+++ b/week2/day3/1_复习.html
@@ -10,7 +10,7 @@
     
 </body>
 </html>
-<script>
+<script src=''>
     /* 
         类          实例
        人类         奥巴马
@@ -64,4 +64,12 @@
 
     
 
+</script>
+<script>
+    let a = 123;
+    var b = 123;
+    debugger
+</script>
+<script>
+    console.log(a)
 </script>
