--- a/week2/day3/8_bind.html
+++ b/week2/day3/8_bind.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-   
+
 </body>
+
 </html>
-<script>
+<script src=''>
     /* 
         bind 用法跟call 一样 ; bind的返回值是一个新函数；新函数执行时 fn才会执行，fn中的this这时才被改成obj
         var f = fn.bind(obj,1,2,3,4)
         f中的this 不会在发生任何改变了；再使用 call  apply 也不好使；
 
         call  apply 都是让函数立即执行了；但是bind是返回了一个新函数；
-    */ 
+    */
     function fn() {
         // console.log([...arguments])
         // console.log(this)
@@ -27,25 +30,57 @@
         return 123;
     }
     var obj = {
-        a:12,
-        b:13
+        a: 12,
+        b: 13
     }
     // fn.call(obj,1,2,3,4)
-    var f = fn.bind(obj,6,6,6,6);
+    var f = fn.bind(obj, 6, 6, 6, 6);
     // f执行 让 fn执行; 并且把 6，6，6，6传给fn；fn中的this 指向是 obj;
     // 把 6，6，6，6 理解成 f 的默认参数；再给f传递参数的时候；会把传递的参数补在 默认参数的后边；
     console.log(f)
 
     // 实现一个myBind  用法等同于 bind;
-    Function.prototype.myBind = function(context,...arg){
+    Function.prototype.myBind = function (context, ...arg) {
         // this --->  fn
         var _this = this;
-        return function(...ary){
+        return function (...ary) {
             // _this(...arg)
-            return _this.apply(context,arg.concat(ary))
+            return _this.apply(context, arg.concat(ary))
         }
     }
-    var f2 = fn.myBind(obj,6,6,6,6);
-    f2(8,8,8,8)
+    var f2 = fn.myBind(obj, 6, 6, 6, 6);
+    f2(8, 8, 8, 8)
 
+
+
+
+
+    async function async1() {
+        console.log("async1 start");
+        await async2(); // await下边的内容 相当于 promise的then
+        console.log("async1 end"); // 第一个微任务异步
+    }
+
+    async function async2() {
+        console.log('async2');
+    }
+
+    console.log("script start");
+
+    setTimeout(function () {
+        console.log("settimeout");
+    }, 0);
+
+    async1();
+
+    new Promise(function (resolve) {
+        console.log("promise1");
+        resolve();
+    }).then(function () {
+        console.log("promise2"); //第二个异步微任务
+    });
+    console.log('script end');
+</script>
+<script>
+    
 </script>
